2005-06-20  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (add_signals): Return a new dictionary
	to replace __gsignals__, whith signal names canonicalized
	(s/-/_/), for the signals that are being overridden, so that the
	class_init functions can safely check for them.

	* codegen/codegen.py (Wrapper.write_virtuals): Before overriding
	virtual method, check if the corresponding signal is already being
	overridden.

	* gobject/gobjectmodule.c (pyg_type_register): Instead of deleting
	__gsignals__, replace it with a dict containing only overridden
	signals, as returned by add_signals().  This is so that class init
	functions can inspect the signals that are being overridden.
	__gsignals__ then get's deleted only after running
	pyg_run_class_init.

	Fixes Bug 308097: Overriden realize gets called twice.

	* codegen/reversewrapper.py: Register GtkAllocation* as an alias
	for GdkRectangle*.  Fixes #Bug 308099: No GtkWidget proxy handler
	for do_size_allocate.

	* codegen/argtypes.py (ULongArg): Use the new (python 2.3) 'k'
	template char to convert unsigned long, so that parsing of ULong
	parameters accepts both int and long python values.  Add new
	UInt32Arg argtype for guint32, subclassing ULongArg and adding
	range checking on platforms that require it.  As a side effect,
	guint32 return values are now always translated to python longs
	( before they would be longs on 32-bit systems, or ints on 64-bit
	systems ).

2005-06-20  Mark McLoughlin  <mark@skynet.ie>

	Fixes bug #308384

	* gtk/gdk.override: make gtk.gdk.Window.set_user_data()
	accept None

2005-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygobject.c (pygobject_new_with_interfaces): Fix 
	typo in documentation string. Fixes #171910 (Tuure Laurinolli
	and Gian Mario Tagliaretti)

2005-06-17  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* examples/pango/pangocairo-simple.py (main): Demonstrate how to
	output PDF file from the same drawing subroutine.
