@@ -1,3 +1,10 @@
+2005-06-21  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gobject/pygparamspec.c: (pygenum_from_pspec),
+	(pygflags_from_pspec): Try to register unknown enums and flags on the fly.
+	Fixes #308536, patch by Edward Hervey
+	* gobject/pygflags.c: (pyg_flags_add): Make module optional.
+
 2005-06-20  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gobject/gobjectmodule.c (add_signals): Return a new dictionary
